--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.22.0
-transformers==4.25.1
+streamlit
+transformers
 tokenizers
-gtts==2.2.3
-fpdf==1.7.2
-pyngrok==5.2.0
+gtts
+fpdf
+pyngrok
